--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -150,12 +150,12 @@
             <div class="font-medium truncate line-clamp-2">{{email}}</div>
           </div>
           <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
-            @if(loggedAsOrg == false || roles.includes('orgAdmin')) {
+            @if(loggedAsOrg == false || roles.includes(orgAdminRole)) {
               <li>
                 <button id="userProfile" (click)="goTo('/profile')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faAddressCard" class="mr-2"></fa-icon>{{ 'HEADER._profile' | translate }}</button>
               </li>
             }
-            @if(roles.includes('seller')){
+            @if(roles.includes(sellerRole)){
               <li>
                 <button id="myOfferings" (click)="goTo('/my-offerings')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faHandHoldingBox" class="mr-2"></fa-icon>{{ 'HEADER._offerings' | translate }}</button>
               </li>
