ADD dome blog section (#125)
* ADD first approach of DOME blog

* Fixes title colors

* ADD update blog entry + backend calls

* FIX Linkeding Tag

--- a/src/app/shared/forms/markdown-textarea/markdown-textarea.component.html
+++ b/src/app/shared/forms/markdown-textarea/markdown-textarea.component.html
@@ -97,7 +97,7 @@
         <textarea id="editor"
                   data-cy="textArea"
                   class="block w-full h-fit px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0"
-                  placeholder="Add product description..."
+                  placeholder="{{placeholder}}"
                   [value]="value"
                   rows="8"
                   maxLength="100000"
