--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -155,6 +155,7 @@
       <p class="text-sm text-white dark:text-gray-400">Please, select a price plan to get its price</p>
     }
     <button
+      data-cy="addToCart"
       type="button"
       [disabled]="!isFormValid()"
       [class.opacity-50]="!isFormValid()"
