--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -575,6 +575,7 @@
 <!-- Drawer Reutilizable -->
 
     <app-price-plan-drawer
+    data-cy="pricePlanDrawer"
     [drawerId]="'drawer-product'"
     [productOff]="productOff"
     [prodSpec]="prodSpec"
