--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/seller-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/seller-product-spec.component.html
@@ -19,7 +19,7 @@
                     </button>
                 </div>
               </form>-->
-            <button (click)="goToCreate()" type="button" class="ml-2 mr-8 mb-4 text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center align-middle me-2">
+            <button data-cy="createProdSpec" (click)="goToCreate()" type="button" class="ml-2 mr-8 mb-4 text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center align-middle me-2">
                 <p class="hidden lg:block pl-2 pr-2">{{ 'OFFERINGS._add_new_prod' | translate }}</p>
                 <p class="block lg:hidden pl-2 pr-2">{{ 'OFFERINGS._add_new_prod_short' | translate }}</p>
                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -152,9 +152,9 @@
                     </th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody data-cy="prodSpecTable">
                 @for (prod of prodSpecs; track prod.id) {
-                    <tr class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
+                    <tr data-cy="prodSpecRow" class="border-b hover:bg-gray-200 dark:bg-secondary-300 dark:border-gray-700 dark:hover:bg-secondary-200">
                         <td class="px-6 py-4 text-wrap break-all">
                             {{prod.name}}
                         </td>
@@ -180,7 +180,7 @@
                             {{prod.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
                         </td>
                         <td class="px-6 py-4">
-                            <button type="button" (click)="goToUpdate(prod)" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                            <button data-cy="productSpecEdit" type="button" (click)="goToUpdate(prod)" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
                                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                                     <path fill-rule="evenodd" d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z" clip-rule="evenodd"/>
                                 </svg>
