--- a/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
@@ -27,7 +27,7 @@
             </div>
             <div>
                 <span class="font-bold dark:text-white">{{ 'PROFILE._country' | translate }} (*)</span>
-                <select id="country" formControlName="country" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                <select data-cy="orgCountry" id="country" formControlName="country" class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     <option *ngFor="let country of euCountries" [value]="country.code">
                       {{ country.name }}
                     </option>
@@ -299,7 +299,7 @@
             } @else if(addressSelected){
                 <div>
                     <label for="address.country" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'PROFILE._country' | translate }}</label>
-                    <input id="address.country" formControlName="country" name="address.country" type="text"
+                    <input data-cy="orgCountry" id="address.country" formControlName="country" name="address.country" type="text"
                     class="mb-2 bg-gray-50 text-gray-900 dark:bg-secondary-300 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                     [ngClass]="(mediumForm.get('country')?.invalid == true && mediumForm.value.country!='') || (mediumForm.get('country')?.touched && mediumForm.value.country=='') ? 'border-red-600' : 'border-gray-300 dark:border-secondary-200'">
                 </div>
@@ -380,7 +380,7 @@
             </button>
         </div>
         <div class="flex w-full justify-end">
-            <button type="button" [disabled]="!profileForm.valid" [ngClass]="!profileForm.valid ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'"  (click)="updateProfile()" class="m-2 flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+            <button data-cy="orgUpdate" type="button" [disabled]="!profileForm.valid" [ngClass]="!profileForm.valid ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'"  (click)="updateProfile()" class="m-2 flex w-fit justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
                 {{ 'PROFILE._update' | translate }}
             </button>
         </div>
@@ -426,7 +426,7 @@
                 } @else if(selectedMedium.mediumType=='PostalAddress'){
                     <div>
                         <label for="address.country" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'PROFILE._country' | translate }}</label>
-                        <input id="address.country" formControlName="country" name="address.country" type="text"
+                        <input data-cy="orgCountry" id="address.country" formControlName="country" name="address.country" type="text"
                         class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                     </div>
                     <div>
