--- a/src/app/shared/cart-drawer/cart-drawer.component.html
+++ b/src/app/shared/cart-drawer/cart-drawer.component.html
@@ -103,7 +103,7 @@
 
           <!-- go to shopping cart per provider -->
           <div class="mt-4">
-            <button (click)="goToShoppingCart(providerItems.at(0).relatedParty.at(0).id)" type="button"
+            <button data-cy="cartPurchase" (click)="goToShoppingCart(providerItems.at(0).relatedParty.at(0).id)" type="button"
               [disabled]="providerItems.length==0"
               [ngClass]="providerItems.length==0 ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'"
               class="flex w-full items-center justify-center gap-x-2 px-4 py-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
