--- a/src/app/shared/forms/offer/price-plans/price-plans.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-plans.component.html
@@ -61,6 +61,7 @@
 <!-- Price Plan Drawer -->
 @if (showDrawer) {
   <app-price-plan-drawer
+    data-cy="pricePlanDrawer"
     [formGroup]="selectedPricePlan"
     [prodSpec]="prodSpec"
     [action]="action"
